Added sub-forums, so that there is an extra layer in the hierarchy of forums